Update the default path for wdissector and disable limesuiteng by default in cmakelists.txt

--- a/shadower/CMakeLists.txt
+++ b/shadower/CMakeLists.txt
@@ -75,7 +75,7 @@ if(GLIB_FOUND)
   message("C Flags: ${GLIB_CFLAGS}")
 endif()
 
-set(WDISSECTOR_PATH ${PROJECT_SOURCE_DIR}/wdissector)
+set(WDISSECTOR_PATH /root/wdissector)
 set(WDISSECTOR_INCLUDES
   ${GLIB_INCLUDE_DIRS}
   ${WDISSECTOR_PATH}/src/
