Update test files and add missing files

--- a/configs/config-srsran-n78-20MHz.conf
+++ b/configs/config-srsran-n78-20MHz.conf
@@ -50,7 +50,7 @@ pcap_folder = logs/ # Pcap folder
 [worker]
 pool_size = 20 # Worker pool size
 num_ues = 12   # Number of UETrackers to pre-initialize
-enable_gpu_acceleration = true
+enable_gpu_acceleration = false
 
 [exploit]
 module = modules/lib_dummy.so
