Update test and test data for srsran 40 MHz

--- a/configs/config-srsran-n78-40MHz.conf
+++ b/configs/config-srsran-n78-40MHz.conf
@@ -36,6 +36,9 @@ close_timeout = 5000       # Close timeout, after how long haven't received a me
 source_type = uhd # Source type: file, limesdr, uhd
 source_module = build/shadower/libuhd_source.so
 source_params = type=b200,serial=3218CC4,master_clock_rate=46.08e6        # Device arguments for SDR source
+# source_type = file # Source type: file, limesdr, uhd
+# source_module = build/shadower/libfile_source.so
+# source_params = /root/records/srsran-n78-40MHz.fc32        # Device arguments for SDR source
 
 [log]
 log_level = INFO           # General log level
