--- a/configs/config-srsran-n78-40MHz.conf
+++ b/configs/config-srsran-n78-40MHz.conf
@@ -42,7 +42,7 @@ source_params = type=b200,serial=3218CC4,master_clock_rate=46.08e6        # Devi
 
 [log]
 log_level = INFO           # General log level
-syncer_log_level = DEBUG    # Syncer log level
+syncer_log_level = INFO    # Syncer log level
 worker_log_level = INFO    # Worker log level
 bc_worker_log_level = INFO # Broadcast worker log level
 
