Add resampler to uhd source

--- a/configs/config-srsran-n41-20MHz.conf
+++ b/configs/config-srsran-n41-20MHz.conf
@@ -32,14 +32,12 @@ pdsch_prbs = 24            # PDSCH PRBs
 close_timeout = 5000       # Close timeout, after how long haven't received a message should stop tracking the UE (ms)
 
 [source]
-# source_type = uhd
-# source_params = type=b200,serial=31BADEB
-# source_module = build/shadower/libuhd_source.so
-# source_module = build/shadower/libfile_source.so
-source_type = limesdr # Source type: file, limesdr, uhd
-source_params = logLevel:3,port0:"dev0",dev0:"XTRX",dev0_chipIndex:0,dev0_linkFormat:"I12",dev0_rx_path:"LNAW",dev0_tx_path:"BAND1",dev0_max_channels_to_use:1,dev0_calibration:"none",dev0_rx_gfir_enable:0,dev0_tx_gfir_enable:0        # Device arguments for SDR source
-source_module = build/shadower/liblimesdr_source.so
-# device_args = type=b200,serial=31BADEB        # Device arguments for SDR source
+source_type = uhd
+source_params = type=b200,serial=3218CC4
+source_module = build/shadower/libuhd_source.so
+# source_type = limesdr # Source type: file, limesdr, uhd
+# source_params = logLevel:3,port0:"dev0",dev0:"XTRX",dev0_chipIndex:0,dev0_linkFormat:"I12",dev0_rx_path:"LNAW",dev0_tx_path:"BAND1",dev0_max_channels_to_use:1,dev0_calibration:"none",dev0_rx_gfir_enable:0,dev0_tx_gfir_enable:0        # Device arguments for SDR source
+# source_module = build/shadower/liblimesdr_source.so
 
 [log]
 log_level = INFO           # General log level
