--- a/configs/config-srsran-n78-40MHz.conf
+++ b/configs/config-srsran-n78-40MHz.conf
@@ -38,6 +38,9 @@ source_params = type=b200,serial=3218CC4,master_clock_rate=46.08e6        # Devi
 # source_type = file # Source type: file, limesdr, uhd
 # source_module = build/shadower/libfile_source.so
 # source_params = /root/records/srsran-n78-40MHz.fc32        # Device arguments for SDR source
+# source_type = limesdr # Source type: file, limesdr, uhd
+# source_module = build/shadower/liblimesdr_source.so
+# source_params = logLevel:3,port0:"dev0",dev0:"XTRX",dev0_chipIndex:0,dev0_linkFormat:"I12",dev0_rx_path:"LNAW",dev0_tx_path:"BAND1",dev0_max_channels_to_use:1,dev0_calibration:"none",dev0_rx_gfir_enable:0,dev0_tx_gfir_enable:0
 
 [log]
 log_level = INFO           # General log level
