--- a/shadower/test/CMakeLists.txt
+++ b/shadower/test/CMakeLists.txt
@@ -15,6 +15,12 @@ if (USE_CUDA)
   target_link_libraries(search_ssb_freq_test ssb_cuda)
 endif(USE_CUDA)
 
+add_executable(ssb_frequency_correction ssb_frequency_correction.cc ${TestCommonSources})
+target_link_libraries(ssb_frequency_correction ${SRSUE_SOURCES} ${SRSRAN_SOURCES} Threads::Threads)
+if (USE_CUDA)
+  target_link_libraries(search_ssb_freq_test ssb_cuda)
+endif(USE_CUDA)
+
 add_executable(syncer_test syncer_test.cc ${TestCommonSources} ${SHADOWER_DIR}/syncer.cc)
 target_link_libraries(syncer_test ${SRSUE_SOURCES} ${SRSRAN_SOURCES} zmq)
 if (USE_CUDA)
