--- a/shadower/test/CMakeLists.txt
+++ b/shadower/test/CMakeLists.txt
@@ -119,5 +119,5 @@ target_link_libraries(ldpc_test PRIVATE ${SRSUE_SOURCES} ${SRSRAN_SOURCES} srsra
 add_executable(pcap_writer pcap_writer.cc)
 target_link_libraries(pcap_writer ${SRSUE_SOURCES} ${SRSRAN_SOURCES})
 
-add_executable(resampler resampler_test.cc)
-target_link_libraries(resampler ${SRSUE_SOURCES} ${SRSRAN_SOURCES} liquid)
+add_executable(resampler_compare resampler_compare.cc)
+target_link_libraries(resampler_compare ${SRSUE_SOURCES} ${SRSRAN_SOURCES} liquid)
