Update the parameters in the configs accordingly

--- a/configs/config-srsran-n78-20MHz.conf
+++ b/configs/config-srsran-n78-20MHz.conf
@@ -41,7 +41,7 @@ source_params = type=b200,serial=3218CC4        # Device arguments for SDR sourc
 # source_params = /root/records/uhd.fc32        # Device arguments for SDR source
 #source_type = limesdr # Source type: file, limesdr, uhd
 #source_module = build/shadower/liblimesdr_source.so
-#source_params = logLevel:3,freq_corr:34500,port0:"dev0",dev0:"XTRX",dev0_chipIndex:0,dev0_linkFormat:"I12",dev0_rx_path:"LNAH",dev0_tx_path:"Band1",dev0_max_channels_to_use:1,dev0_calibration:"none",dev0_rx_gfir_enable:0,dev0_tx_gfir_enable:0
+#source_params = logLevel:3,dev0:XTRX,chipIndex:0,channels:1,linkFormat:I12,rx_path:LNAH,tx_path:Band1,calibration:none,freq_corr:34000,tx_enabled:0
 
 [log]
 log_level = INFO           # General log level
