--- a/configs/config-srsran-n41-20MHz.conf
+++ b/configs/config-srsran-n41-20MHz.conf
@@ -36,7 +36,7 @@ source_type = uhd
 source_params = type=b200,serial=3218CC4
 source_module = build/shadower/libuhd_source.so
 # source_type = limesdr # Source type: file, limesdr, uhd
-# source_params = logLevel:3,port0:"dev0",dev0:"XTRX",dev0_chipIndex:0,dev0_linkFormat:"I12",dev0_rx_path:"LNAW",dev0_tx_path:"BAND1",dev0_max_channels_to_use:1,dev0_calibration:"none",dev0_rx_gfir_enable:0,dev0_tx_gfir_enable:0        # Device arguments for SDR source
+# source_params = logLevel:3,dev0:XTRX,chipIndex:0,channels:1,linkFormat:I12,rx_path:LNAH,tx_path:Band1,calibration:none,freq_corr:34000,tx_enabled:0
 # source_module = build/shadower/liblimesdr_source.so
 
 [log]
