--- a/shadower/tools/CMakeLists.txt
+++ b/shadower/tools/CMakeLists.txt
@@ -1,2 +1,4 @@
-add_executable(recorder ${PROJECT_SOURCE_DIR}/shadower/tools/recorder.cc ${PROJECT_SOURCE_DIR}/shadower/src/source.cc)
+add_executable(recorder ${SHADOWER_DIR}/tools/recorder.cc ${SHADOWER_DIR}/source/source.cc)
 target_link_libraries(recorder pthread liquid)
+
+add_executable(cutter ${SHADOWER_DIR}/tools/cutter.cc)
