Update the syncer component to receive samples from multiple channels

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -41,7 +41,7 @@
                 "-f",
                 "3427.5",
                 "-n",
-                "2000",
+                "200000",
                 "-s",
                 "23.04",
                 "-S",
@@ -77,6 +77,57 @@
                 "133",
                 "-n",
                 "5"
+            ],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+        },
+        {
+            "name": "syncer_test_file",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/shadower/comp/sync/syncer_test",
+            "args": [
+                "-s",
+                "23.04",
+                "-f",
+                "3427.5",
+                "-b",
+                "3421.92",
+                "-t",
+                "file",
+                "-d",
+                "/root/records/example_ch_0.fc32,/root/records/example_ch_1.fc32",
+                "-c",
+                "2",
+                "-r"
+            ],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+        },
+        {
+            "name": "syncer_test_uhd",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/shadower/comp/sync/syncer_test",
+            "args": [
+                "-s",
+                "23.04",
+                "-f",
+                "3427.5",
+                "-b",
+                "3421.92",
+                "-t",
+                "uhd",
+                "-d",
+                "type=b200,master_clock_rate=23.04e6",
+                "-c",
+                "2",
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
