--- a/shadower/utils/CMakeLists.txt
+++ b/shadower/utils/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(utils
     utils.cc
+    ssb_utils.cc
 )
-target_link_libraries(utils srslog)
+target_link_libraries(utils srslog srsran_phy)
