--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,8 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "span": "cpp",
+        "random.h": "c"
     }
 }
